# CLI-Sms-Client

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
app/: config.py  exceptions.py  main.py  request.py  response.py
app/http/: auth.py  body.py  client.py  message.py  schemas.py
app/http_client/: schemas.py
app/utils/: cli.py  console.py  logging.py
tests/: conftest.py  test_config.py
tests/test_http/: test_auth.py  test_body.py  test_message.py  test_request.py  test_schemas.py
tests/test_utils/: test_cli.py
