[project]
name = "cli-sms-client"
version = "0.1.0"
description = "CLI client for sending SMS"
authors = [
    {name = "Sergei Vdovenkov",email = "sivdovenkov.it@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "toml[all] (>=0.10.2,<0.11.0)",
    "rich (>=14.0.0,<15.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
types-toml = "^0.10.8.20240310"
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.11.2"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-sugar = "^0.9.7"
pytest-cov = "^6.1.0"

[tool.black]
line-length = 120 
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["app"]
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/.venv/*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C"]
ignore = [
    "E501",  # line too long
    "C901",  # too complex
]

[tool.mypy]
strict = true
ignore_missing_imports = true
explicit_package_bases = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --strict-markers --tb=short --cache-clear --color=yes"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "\\.\\.\\.\\s*$",
    "if __name__ == .__main__.:",
]
